--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lit-reactive-blob",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "lit": "^3.0.0",
     "short-unique-id": "^5.0.3",
+    "typescript": "^5.2.2",
     "uuid": "^9.0.1"
   }
 }
