--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lit-reactive-blob",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,5 +14,7 @@
     "short-unique-id": "^5.0.3",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1"
-  }
+  },
+  "types": "dist/package.d.ts"
+
 }
