--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lit-reactive-blob",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +15,6 @@
     "typescript": "^5.2.2",
     "uuid": "^9.0.1"
   },
-  "types": "dist/package.d.ts"
+  "types": "main.d.ts"
 
 }
